# PolymarketPipeline-Primape

./: .replit  AUTO_CATEGORIZATION_README.md  EVENT_MARKET_FILTERING.md  EVENT_MARKET_TRANSFORMATION.md  EVENT_MODEL_IMPLEMENTATION_GUIDE.md  EVENT_MODEL_README.md  IMAGE_HANDLING_RULES.md  OPTION_DEDUPLICATION.md  PIPELINE_IMPROVEMENTS.md  PIPELINE_README.md  PIPELINE_USAGE.md  POLYMARKET_API_INTEGRATION.md  README.md  SLACK_FORMATTING_GUIDE.md  active_markets.json  add_event_fields_extended_migration.py  add_event_fields_migration.py  add_event_fields_to_markets.py  add_event_fields_to_pending_markets.py  add_market_event_fields_migration.py  add_posted_field_to_pending_markets.py  api_routes.py  categorize_approved_markets.py  check_approval_logs.py  check_deployed_markets.py  check_deployment_approval_format.py  check_deployment_approvals.py  check_events.py  check_image_approvals.py  check_image_urls.py  check_market_approvals.py  check_markets.py  check_pending_approvals.py  check_pending_market_approvals.py  check_pending_markets.py  check_pipeline_status.py  check_shared_events.py  check_slack_message_format.py  check_test_approval.py  check_test_market.py  (+196 more)
abi/: market.json  predictor.json
attached_assets/: Pasted--id-507395-question-Will-Real-Madrid-win-La-Liga-conditio-1746650426968.txt  Pasted--id-507395-question-Will-Real-Madrid-win-La-Liga-conditio-1746650451824.txt  Pasted-hey-Replit-can-you-plz-help-me-out-in-a-way-that-i-ned-to-figure-out-that-with-which-category-out-fr-1746554966780.txt  content-1746283844675.md  content-1746285019684.md  (+8 more)
(+76 files in other folders)
